Fix popover modal z-index issue

--- a/sass/blocks/_boss-page-main.sass
+++ b/sass/blocks/_boss-page-main.sass
@@ -52,7 +52,6 @@ $block: ".boss-page-main"
   // $Page main container content
   &__content
     position: relative
-    z-index: 3
     display: flex
     flex-direction: column
     align-items: stretch
