--- a/sass/blocks/_boss-popover.sass
+++ b/sass/blocks/_boss-popover.sass
@@ -28,7 +28,7 @@ $block: ".boss-popover"
   &:before
     content: ''
     position: absolute
-    z-index: 10
+    z-index: 10001
     left: 50%
     bottom: 100%
     display: block
@@ -40,7 +40,7 @@ $block: ".boss-popover"
   &:after
     content: ''
     position: absolute
-    z-index: 9
+    z-index: 10002
     left: 50%
     bottom: 100%
     display: block
